# docstrings

./: README.md  pyproject.toml
docstrings/: __init__.py  cst.py  docgenerator.py  files.py
docstrings/tests/: test_files.py
