[project]
name = "docstrings"
version = "0.1.0"
description = "Automatically generate NumPy-style docstrings"
authors = [{ name="Nimish Purohit", email="nimishpurohitn@gmail.com" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["click", "libcst", "pathspec", "pytest"]

[project.scripts]
docstrings = "docstrings:main"
